syntax="proto3";
package proto;

option go_package="./;proto";

service UserService{
   rpc Signup(ReqSignup) returns (RespSignup) {}
  //rpc Signin() returns () {}
}

message ReqSignup{
  string Username = 1;
  string password= 2;
}

message RespSignup {
  int32 code=1;
  string message=2;
}