syntax = "proto3";

package go.micro.service.upload;
option go_package= "./;go_micro_service_upload";

service UploadService {
  rpc UploadEntry(ReqEntry) returns (RespEntry) {}
}

message ReqEntry {

}
message RespEntry{
  int32 code=1;
  string message=2;
  string entry=3;
}